refactor middleware in account modul
